--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto+Slab:wght@400;700&family=Rubik:wght@400;700&family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto+Slab:wght@400;700&family=Rubik:wght@400;700&family=Space+Mono&family=Bangers&family=Patua+One&family=Righteous&family=Bungee&display=swap');
 
 .toddler-app {
   width: 100vw;
@@ -399,10 +399,14 @@ h1 {
 }
 
 /* Alternate fonts for repeated presses */
-.font-a { font-family: 'Fredoka One', 'Arial Black', Arial, sans-serif; }
-.font-b { font-family: 'Roboto Slab', Georgia, 'Times New Roman', serif; }
-.font-c { font-family: 'Space Mono', 'Courier New', Courier, monospace; }
-.font-d { font-family: 'Rubik', 'Trebuchet MS', 'Helvetica Neue', Arial, sans-serif; }
+.font-a { font-family: 'Bangers', 'Arial Black', Arial, sans-serif; }
+.font-b { font-family: 'Fredoka One', 'Arial Black', Arial, sans-serif; }
+.font-c { font-family: 'Patua One', Georgia, 'Times New Roman', serif; }
+.font-d { font-family: 'Righteous', 'Trebuchet MS', 'Helvetica Neue', Arial, sans-serif; }
+.font-e { font-family: 'Bungee', 'Impact', 'Arial Black', sans-serif; }
+.font-f { font-family: 'Roboto Slab', Georgia, 'Times New Roman', serif; }
+.font-g { font-family: 'Space Mono', 'Courier New', Courier, monospace; }
+.font-h { font-family: 'Rubik', 'Trebuchet MS', 'Helvetica Neue', Arial, sans-serif; }
 
 /* Fish swim across */
 .fish {
